# log-report-automation

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
sample_data/: demo_production_logs.csv  example.csv
src/: cli.py  main.py  report_utils.py
tests/: test_report_integration.py  test_validation.py
tools/: generate_demo_csv.py
